force-app/main/default/objects/CEE_Categorie__c/CEE_Categorie__c.object-meta.xml
<CustomObject>
    <description>Tableau des catégories pour la prime CEE selon les revenus fiscaux et la zone du chantier</description>
    <label>CEE Catégorie</label>
    <nameField>
        <displayFormat>CEEC/{YYYY}/{0000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CEE Catégories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>