force-app/main/default/objects/CEE_Categorie__c/fields/debutValidite__c.field-meta.xml
<CustomField>
    <fullName>debutValidite__c</fullName>
    <label>Début validité</label>
    <required>true</required>
    <type>Date</type>
</CustomField>