force-app/main/default/objects/CEE_Categorie__c/fields/finValidite__c.field-meta.xml
<CustomField>
    <fullName>finValidite__c</fullName>
    <label>Fin validité</label>
    <type>Date</type>
</CustomField>