force-app/main/default/objects/CEE_Categorie__c/fields/nbPersonnes__c.field-meta.xml
<CustomField>
    <fullName>nbPersonnes__c</fullName>
    <label>Nombres de personnes</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>