force-app/main/default/objects/CEE_Categorie__c/fields/pivotAB__c.field-meta.xml
<CustomField>
    <fullName>pivotAB__c</fullName>
    <label>Revenus fiscaux pivot AB</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>