force-app/main/default/objects/CEE_Categorie__c/validationRules/VR001_K2_CategorieCEE_DateValide.validationRule-meta.xml
<ValidationRule>
    <fullName>VR001_K2_CategorieCEE_DateValide</fullName>
    <active>true</active>
    <description>Vérifier que les dates de début et de fin sont bien chronologiquement dans le bon ordre</description>
    <errorConditionFormula>debutValidite__c &gt; finValidite__c</errorConditionFormula>
    <errorDisplayField>finValidite__c</errorDisplayField>
    <errorMessage>La date de fin de validité ne peut pas être inférieure à la date de début de validité.</errorMessage>
</ValidationRule>