force-app/main/default/objects/CEE_Categorie__c/listViews/CEE_Categories.listView-meta.xml
<ListView>
    <fullName>CEE_Categories</fullName>
    <columns>NAME</columns>
    <columns>debutValidite__c</columns>
    <columns>finValidite__c</columns>
    <columns>nbPersonnes__c</columns>
    <columns>pivotAB__c</columns>
    <columns>pivotBC__c</columns>
    <columns>zone__c</columns>
    <filterScope>Everything</filterScope>
    <label>CEE Catégories</label>
    <language>fr</language>
</ListView>